<resources>
    <string name="app_name">MeMyFolks</string>
    <string name="empty_data"></string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="close_label">Close</string>
    <string name="no_internet">No/Poor internet connection</string>
    <string name="modify_profile_error">You don\'t have access to modify/edit the profile</string>
    <string name="give_admin_access_msg">Would you like to provide admin access to %s</string>
    <string name="remove_admin_access_msg">Would you like to remove admin access to %s</string>
    <string name="success_admin_access_msg">Admin access updated successfully</string>
    <string name="login_search">Search</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="will_sent_otp">We will send you 4 digit verification code via SMS and WhatsApp</string>
    <string name="generate_otp_btn">Generate OTP</string>
    <string name="static_country_code">+91</string>
    <string name="i_agreed_terms_condition">I agreed Terms &amp; Conditions</string>
    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="label_otp_verification">OTP Verification</string>
    <string name="label_otp_sent_content">We have sent you 4 digit verification code via SMS and WhatsApp</string>
    <string name="label_otp_not_receive_1">Didn\'t receive OTP?</string>
    <string name="label_otp_not_receive_2">RESEND</string>
    <string name="label_verify_continue">Verify &amp; Continue</string>
    <string name="success_otp_sent">OTP sent successfully</string>
    <string name="add_family_my_family">My Family</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="alternate_label">Alternate</string>
    <string name="email_label">Email</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_date_of_birth">Date of Birth</string>
    <string name="label_date_of_birth_year">Birth Year</string>
    <string name="label_profession">Profession</string>
    <string name="label_living">Living</string>
    <string name="label_death">Death</string>
    <string name="label_death_date">Death: dd/MM/yyy</string>
    <string name="label_popularly">Popularly Known as</string>
    <string name="label_crazy_about">I am crazy about</string>
    <string name="label_ex_guddi">Ex: guddi Mausi colonel uncle</string>
    <string name="label_address">Address</string>
    <string name="label_location">Location</string>
    <string name="label_state">State</string>
    <string name="label_country">Country</string>
    <string name="label_more_info">More Info</string>
    <string name="label_save">Save</string>
    <string name="label_update">Update</string>
    <string name="label_add_family">Add Family</string>
    <string name="label_camera">Camera</string>
    <string name="label_family">Family</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_camera_storage_permission_req">Unable to access this feature due to lack Permission</string>
    <string name="label_settings">Settings</string>
    <string name="label_name">Name</string>
    <string name="label_call">Call</string>
    <string name="label_family_tree">Family Tree</string>
    <string name="label_tree">Tree</string>
    <string name="label_profile">Profile</string>
    <string name="label_up_coming_event">Upcoming Event</string>
    <string name="label_view">View</string>
    <string name="label_publish">Publish</string>
    <string name="label_family_wall">Family wall</string>
    <string name="label_share">Share</string>
    <string name="error_select_country">Please select country</string>
    <string name="label_ok">Ok</string>
    <string name="label_others">Others</string>
    <string name="label_edit_profile">Edit profile</string>
    <string name="label_logout">Logout</string>
    <string name="label_delete">Delete</string>
    <string name="delete_account_desc">Are you sure, Do you want to delete this account?</string>
    <string name="label_yes">Yes</string>
    <string name="label_request">Request</string>
    <string name="label_bubbles">Bubbles</string>
    <string name="label_story">Story</string>
    <string name="label_notification">Notification</string>
    <string name="label_edit">Edit</string>
    <string name="label_choose_action">Choose action</string>
    <string name="label_or">OR</string>
    <string name="label_adding_relationship">Adding %s for %s</string>
    <string name="label_native">Native</string>
    <string name="label_lineage">Lineage</string>
    <string name="label_atleast_one_parent">Add one parent of %s to enable the addition of a brother or sister</string>
    <string name="label_delete_acc_info">If the name you entered is  incorrect, you can just change the name. No need to delete the member.</string>
    <string name="label_access_denied">Access denied</string>
    <string name="select_relation_ship">Please select relationship</string>
    <string name="first_name_error">Please enter valid first name</string>
    <string name="last_name_error">Please enter valid last name</string>
    <string name="alternate_mobile_number_error">Please enter valid alternate mobile number with country code</string>
    <string name="mobile_number_error">Please enter valid mobile number with country code</string>
    <string name="email_id_error">Please enter valid email id</string>
    <string name="birth_date_error">Please enter birth date</string>
    <string name="profession_error">Please enter valid profession</string>
    <string name="death_date_error">Please enter death date</string>
    <string name="profile_updated_success_fully">Profile updated successfully</string>
    <string name="family_member_add_success_fully">Family member added successfully</string>
    <string name="relation_updated_success_fully">Relationship updated successfully</string>
    <string name="account_delete_success">Delete account successfully</string>
    <string name="member_already_exists_msg">You already have same member name with same relationship. Do you want to continue?</string>
    <string name="invitation_sent_success_fully">Invitation sent successfully</string>
    <string name="mobile_number_already_exist">Entered Mobile number already exist</string>
    <string name="label_add_story">Add Story</string>
    <string name="label_content">Content..</string>
    <string name="label_private">Private</string>
    <string name="label_my_tree">My Tree</string>
    <string name="label_public">Public</string>
    <string name="label_post">Post</string>
    <string name="label_photos">Photos</string>
    <string name="label_videos">Videos</string>
    <string name="label_audio">Audio</string>
    <string name="label_add_media">Add Media</string>
    <string name="label_write_something">Write something...</string>
    <string name="label_write_title">Title...</string>
    <string name="story_added_success_fully">Story added successfully</string>
    <string name="soft_app_update_content">There is a new version of app available. Please update your app for better experience</string>
    <string name="force_app_update_content">There is a new version of app available. Please update your app to continue using the services</string>
    <string name="update_available">Update Available</string>
    <string name="update_label">Update</string>
    <string name="skip_label">Skip</string>
    <string name="like_label">Like</string>
    <string name="comment_label">Comment</string>
    <string name="share_label">Share</string>
    <string name="view_label">View</string>
    <string name="already_added_max_media">You already added max number of media files.</string>
    <string name="notification">Notification</string>
    <string name="no_data_found">No data found</string>
    <string name="label_about">About</string>
    <string name="label_blog">Blog</string>
    <string name="label_help">Help</string>
    <string name="label_guide">Guide</string>
    <string name="label_facebook">Facebook link</string>
    <string name="label_instagram">Instagram link</string>
    <string name="label_twitter">Twitter link</string>
    <string name="label_linkedin">LinkedIn link</string>
    <string name="error_invalid_url">Enter valid URL</string>
    <string name="error_invalid_about">Enter about</string>
    <string name="label_about_me">About Me</string>
    <string name="label_invite">Invite</string>
    <string name="label_invite_with_fname">Invite %s</string>
    <string name="label_kindly_add_mobile_number_to_invite">Kindly add %s\'s mobile number to send invite</string>
    <string name="notification_channel_id">Activity</string>
    <string name="notification_channel_name">PromoNotification</string>
    <string name="label_feedback">Feedback</string>
    <string name="label_subject">Subject</string>
    <string name="label_comments">Comments</string>
    <string name="label_submit">Submit</string>
    <string name="feedback_submit_success_fully">Feedback submitted successfully</string>
    <string name="add_event">Add Event</string>
    <string name="add_video">Add Video</string>
    <string name="add_image">Add Image</string>
</resources>